fix double scroll bar issue in Firefox

--- a/stylus/Flare/structure.styl
+++ b/stylus/Flare/structure.styl
@@ -1,9 +1,8 @@
 html, body
-  height: $fullheight
+  height: 100vh
   width: $fullwidth
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden
+  margin: 0
+  padding: 0
 
 body
   @extends .display-flex
@@ -33,3 +32,15 @@ body
 .one-fourth
   width: 25%
   margin: 0 auto
+
+::-webkit-scrollbar
+  width: 0.35em
+
+  &:horizontal
+    display: none
+
+::-webkit-scrollbar-track
+  background-color: $bordercolor
+
+::-webkit-scrollbar-thumb
+  background-color: $brandcolor
